AlcoBot v1.2.0 (not released):
  NEW: Command to display group pre statistics, !pregroup <name>.
  NEW: Command to display pre database statistics, !predb.
  NEW: Database abstraction layer library, replacing ODBC.
  NEW: Database tables are created automatically if they don't exist.
  NEW: Pattern matching options for the pre search, -match exact|regexp|wild.
  NEW: The !site command displays all output, unless the -quiet switch is used.
  CHG: Debug log callbacks for the FTP library are per-handle instead of global.
  CHG: Libraries only set the errorCode value when intentionally throwing exceptions.
  CHG: Renamed tree library function "Tree::GetNaive" to "Tree::GetQuiet".
  FIX: Handle arguments consistently in the nxtools module.

AlcoBot v1.1.0 (Apr 12, 2006):
  NEW: Commands can throw CMDHELP and GETOPT errors to display command usage.
  NEW: Modules are reference counted, so dependencies won't be unloaded early.
  NEW: Modules clean-up after themselves, so they can be unloaded at any time.
  NEW: Multiple prefixes can be specified for commands (e.g. !bw and !sitebw).
  NEW: Redesigned the command option system: prefixes are configurable per
       command, new permission options, and the command type must be declared.
  NEW: Script variable definitions are now modules.
  NEW: Variable definitions and theme entries are now in groups according to
       the module they interface with (improves ioA/nxTools support).
  CHG: Changed the section colour format.
  CHG: Moved sitebot connection code from the "ftpd" module to "ftpconn".
  CHG: Moved the formatting and variable systems to the bot's core.
  CHG: Removed the "varFiles" option from the configuration file.
  CHG: Renamed all library commands and dropped the namespace exports.
  FIX: The groups module didn't remove sections with no groups.

AlcoBot v1.0.0 (Feb 23, 2006):
  NEW: Improved installation instructions.
  NEW: Option to include or exclude hidden users in bandwidth stats (!bw/!bwdn/!bwup).