@@ -4,6 +4,7 @@ AlcoBot v1.2.0 (not released):
   NEW: Database abstraction layer library, replacing ODBC.
   NEW: Database tables are created automatically if they don't exist.
   NEW: Pattern matching options for the pre search, -match exact|regexp|wild.
+  NEW: Support for additional FTP daemons can be added by creating a module sub-directory.
   NEW: The !site command displays all output, unless the -quiet switch is used.
   CHG: Debug log callbacks for the FTP library are per-handle instead of global.
   CHG: Libraries only set the errorCode value when intentionally throwing exceptions.
